# rocket_static_fs

./: .travis.yml  Cargo.toml  Cargo.toml.orig  README.md
src/: lib.rs  options.rs
src/fs/: embedded.rs  local.rs  mod.rs
templates/: directory_listing.hbs
testdata/: dummy.pack
testdata/assets/inner/deeper/: deep.txt
