[package]
name = "rocket_static_fs"
version = "0.5.1"
description = "A simple static file server for the rocket framework."
repository = "https://github.com/ekranos/rocket_static_fs"
homepage = "https://github.com/ekranos/rocket_static_fs"
documentation = "https://ekranos.github.io/rocket_static_fs/rocket_static_fs/"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
keywords = ["rocket", "static", "file", "server"]
categories = ["web-programming"]
edition = "2021"

[[bin]]
name = "rocket_static_fs_prepare_tests"
path = "src/bin/prepare-tests/main.rs"

[features]
default = ["content_encoding"]
content_encoding = ["flate2"]

[dependencies]
tokio = { version = "1.20.1", default-features = false, features = ["fs"] }
rocket = "0.5.0-rc.2"
chrono = "0.4"
mime_guess = "2.0"
flate2 = { version = "1.0", optional = true }
lazy_static = "1.0"
regex = "1.6"
byteorder = "1.2"
walkdir = "2"
handlebars = "4.3"
serde_derive = "1.0"
serde = "1.0"

[dev-dependencies]
rocket_codegen = "0.5.0-rc.2"
